feat: add pagination, tag system, and global search
- Add prev/next post navigation at article bottom
- Implement post list pagination (15 posts per page)
- Create complete tag system (/tags and /tags/[tag])
- Integrate Pagefind for global search with Cmd+K shortcut
- Fix TypeScript type errors
- Clean up unused imports and variables

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,7 +2,7 @@
 import BaseHead from "../components/BaseHead.astro";
 import Header from "../components/Header.astro";
 import ThemeScript from "../components/ThemeScript.astro";
-import { AUTHOR, SITE_CONFIG, SITE_TITLE } from "../consts";
+import { SITE_CONFIG } from "../consts";
 import { cn } from "../lib/utils";
 
 interface Props {
@@ -14,7 +14,7 @@ interface Props {
   article?: boolean;
 }
 
-const canonicalURL = new URL(Astro.url.pathname, Astro.site);
+
 
 const {
   title,
