--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -12,12 +12,7 @@ interface Props {
 
 const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 
-const {
-  title,
-  description,
-  image,
-  article = false,
-} = Astro.props;
+const { title, description, image, article = false } = Astro.props;
 
 const socialImageURL = await (async () => {
   if (!image) return undefined;
